[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibcp"
version = "1.0.2"
description = "Python Wrapper for Interactive Brokers API"
readme = "README.rst"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [
    { name = "Matt", email = "matt@example.com" },
    { name = "Hamim", email = "me@mdhamim.com" },
]
keywords = ["interactive brokers", "api", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.13.3"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[project.urls]
Homepage = "https://github.com/seracoder/ibcp"
"Bug Tracker" = "https://github.com/seracoder/ibcp/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/ibcp"]
